--- a/age-calculator/src/index.css
+++ b/age-calculator/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +10,44 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+
+.App {
+  display: flex;
+  justify-content: center;
+}
+
+.AgeCalculator {
+  background-color: grey;
+  width: 20%;
+  height: 50vh;
+  text-align: center;
+}
+
+.AgeCalculator > *{
+  margin: 35px;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+form > * {
+  margin: 4px;
+}
+
+button {
+  margin-top: 15px;
+}
+
+h1 {
+  color: white;
+  font-weight: bold;
+}
+
+h3 {
+  color: white;
 }
