--- a/age-calculator/src/index.css
+++ b/age-calculator/src/index.css
@@ -22,6 +22,8 @@ code {
   width: 20%;
   height: 50vh;
   text-align: center;
+  box-shadow: 5px 10px 20px rgba(0, 0, 0, 0.5);
+  border-radius: 5px 20px 5px 20px;
 }
 
 .AgeCalculator > *{
