--- a/age-calculator/src/index.css
+++ b/age-calculator/src/index.css
@@ -1,17 +1,3 @@
-/* body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-} */
-
 .App {
   display: flex;
   justify-content: center;
@@ -20,7 +6,7 @@ code {
 .AgeCalculator {
   background-color: grey;
   width: 20%;
-  height: 50vh;
+  height: 50%;
   text-align: center;
   box-shadow: 5px 10px 20px rgba(0, 0, 0, 0.5);
   border-radius: 5px 20px 5px 20px;
@@ -48,6 +34,7 @@ button {
 h1 {
   color: white;
   font-weight: bold;
+
 }
 
 h3 {
