--- a/age-calculator/src/index.css
+++ b/age-calculator/src/index.css
@@ -1,15 +1,19 @@
 .App {
   display: flex;
   justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 3vh;
 }
 
 .AgeCalculator {
   background-color: grey;
   width: 20%;
-  height: 50%;
+  height: 40%;
   text-align: center;
   box-shadow: 5px 10px 20px rgba(0, 0, 0, 0.5);
   border-radius: 5px 20px 5px 20px;
+  margin-top: 1%;
 }
 
 .AgeCalculator > *{
@@ -39,4 +43,13 @@ h1 {
 
 h3 {
   color: white;
+}
+
+.BirthYearCalculator {
+  background-color: grey;
+  width: 20%;
+  height: 40%;
+  text-align: center;
+  box-shadow: 5px 10px 20px rgba(0, 0, 0, 0.5);
+  border-radius: 5px 20px 5px 20px;
 }
